# pebble

./: .gitignore  CLAUDE.md
firmware/: CLAUDE.md  Cargo.toml  flake.nix
firmware/.cargo/: config.toml
firmware/.zed/: settings.json
firmware/src/: ble.rs  lib.rs  math.rs  nvs_stubs.rs  state.rs
firmware/src/comms/: mod.rs
firmware/src/hal/: ahrs.rs  gps.rs  imu.rs  led.rs  mod.rs  servo.rs
firmware/src/hal/imu/: constants.rs
firmware/src/hal/peripherals/: i2c.rs
firmware/src/tasks/: ble.rs  gps.rs  imu.rs  led.rs  mod.rs  servo.rs
firmware_old/: Cargo.toml  TODO.md
firmware_old/src/: main.rs
firmware_old/src/hal/: compass.rs  gps.rs  imu.rs  leds.rs  servo.rs
firmware_old/src/puzzle/: mod.rs  orientation.rs  waypoint.rs
gui/: Cargo.toml
gui/src/: app.rs  ble.rs  chart.rs  data.rs  http.rs  main.rs  map.rs  orientation.rs  puzzles.rs
hardware/: arrange_leds.py  fabrication-toolkit-options.json  fp-lib-table  pebble.kicad_dru  pebble.kicad_pcb  pebble.kicad_prl  pebble.kicad_pro  pebble.kicad_sch  sym-lib-table  usb-fast-charger.kicad_sch
hardware/production/: bom.csv  netlist.ipc  positions.csv
pebble/: #auto_saved_files#  .gitignore  fp-info-cache  pebble.kicad_pcb  pebble.kicad_prl  pebble.kicad_pro  pebble.kicad_sch  usb-fast-charger.kicad_sch  ~pebble.kicad_sch.lck
pebble/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
