[package]
edition      = "2024"
name         = "pebble"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "pebble"
path = "./src/bin/main.rs"
test = false

[[test]]
harness = false
name    = "hello_test"

[lib]
test = false

[dependencies]
esp-hal = { version = "~1.0", features = ["defmt", "esp32c6", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c6",
] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c6"] }

embassy-net = { version = "0.7.1", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
embedded-hal-bus = { version = "0.3", features = ["async"] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }
# for more networking protocol support see https://crates.io/crates/edge-net
bt-hci = "0.6.0"
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-radio = { version = "0.17.0", features = [
  "ble",
  "coex",
  "defmt",
  "esp-alloc",
  "esp32c6",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
trouble-host = { version = "0.5.0", features = ["gatt"] }
embassy-sync = "0.7.2"
embassy-futures = "0.1.1"

critical-section = "1.2.0"
heapless         = "0.9"
static_cell      = "2.1.1"

ahrs = { version = "0.6", default-features = false }
bmi2 = "0.1.1"
embedded-hal = "1.0.0"
libm = "0.2"
nalgebra = { version = "0.31", default-features = false, features = ["libm"] }
esp-hal-smartled = { version = "0.17.0", features = ["esp32c6"] }
smart-leds = "0.4.0"
uom = { version = "0.37", default-features = false, features = ["si", "f32", "autoconvert"] }

[dev-dependencies]
embedded-test = { version = "0.7.0", features = [
  "defmt",
  "embassy",
  "external-executor",
] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = true
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
